--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,6 @@
   "extends": ["plugin:react/recommended", "plugin:prettier/recommended"],
   "plugins": [],
   "rules": {
-    "react/prop-types": 1
+    "react/prop-types": "off"
   }
 }
