--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,13 @@
     "node": true,
     "es6": true
   },
+  "parser": "babel-eslint",
   "parserOptions": {
-    "parser": "babel-eslint",
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "extends": ["plugin:react/recommended", "plugin:prettier/recommended"],
   "plugins": [],
